--- a/public/index.html
+++ b/public/index.html
@@ -108,12 +108,12 @@
 							Introduce about <br>
 							myself</h2>
 						<p>
-							Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven 
+							Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven
 							midst their. Beast creepeth. Fish days.
 						</p>
 						<p>
-							Is give may shall likeness made yielding spirit a itself together created after sea 
-							is in beast beginning signs open god you're gathering whose gathered cattle let. 
+							Is give may shall likeness made yielding spirit a itself together created after sea
+							is in beast beginning signs open god you're gathering whose gathered cattle let.
 							Creature whales fruit unto meat the life beginning all in under give two.
 						</p>
 						<a class="primary_btn" href="#"><span>Download CV</span></a>
@@ -225,7 +225,7 @@
 					<div class="main_title">
 						<h2>service offers </h2>
 						<p>
-							Is give may shall likeness made yielding spirit a itself togeth created 
+							Is give may shall likeness made yielding spirit a itself togeth created
 							after sea <br> is in beast beginning signs open god you're gathering ithe
 						</p>
 					</div>
@@ -285,7 +285,7 @@
 					<li data-filter=".upcoming">upcoming</li>
 				</ul>
 			</div>
-	
+
 			<div class="filters-content">
 				<div class="row portfolio-grid justify-content-center">
 					<div class="col-lg-4 col-md-6 all latest">
@@ -553,7 +553,7 @@
 					<div class="subscription_box text-center">
 						<h2 class="text-uppercase text-white">get update from anywhere</h2>
 						<p class="text-white">
-							Bearing Void gathering light light his eavening unto dont afraid. 
+							Bearing Void gathering light light his eavening unto dont afraid.
 						</p>
 						<div class="subcribe-form" id="mc_embed_signup">
 							<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscription relative">
@@ -600,6 +600,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
+		<div id="root"></div>
 	</footer>
 	<!--================End Footer Area =================-->
 
@@ -620,6 +621,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 	<script src="js/gmaps.min.js"></script>
 	<script src="js/theme.js"></script>
+
 </body>
 
 </html>
